--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 					 <div class="info">
 						<div class="info__title">ENFOLD HEALTH</div>
 						<div class="info__text">Main Street 1, Olcott Buffalo, United States</div>
-						<div class="info__telephone"><a class="info__telephone" href="tel:+555 283 784 333">+555 283 784 333</a></div>
-						<div class="info__mail"><a class="info__mail" href="mailto:office@enfold-health.com">office@enfold-health.com</a></div>
+						<div class="info__telephone telephone__info"><a class="telephone__link" href="tel:+555 283 784 333">+555 283 784 333</a></div>
+						<div class="info__mail mail__info"><a class="mail__link" href="mailto:office@enfold-health.com">office@enfold-health.com</a></div>
 					 </div>
 					 <div class="info">
 						<div class="info__title">OFFICE HOURS</div>
