--- a/index.html
+++ b/index.html
@@ -79,47 +79,49 @@
 				<div class="help__container">
 					<div class="help__title">WE CAN HELP YOU WITH</div>
 					<div class="cards">
-						<div class="card-item">
-							<a class="card-item__link" href="#">
-								<div class="card-item__text">Weight Lifting</div>
-							</a>
+						<div class="cards__case">
+							<div class="card-item card-item_pink">
+								<a class="card-item__link" href="#">
+									<div class="card-item__text">Weight Lifting</div>
+								</a>
+							</div>
+							<div class="card-item card-item_green">
+								<a class="card-item__link" href="#">
+									<div class="card-item__text">Running & Spinning</div>
+								</a>
+							</div>
+							<div class="card-item card-item_turquoise">
+								<a class="card-item__link" href="#">
+									<div class="card-item__text">Running & Spinning</div>
+								</a>
+							</div>
+							<div class="card-item card-item_blue">
+								<a class="card-item__link" href="#">
+									<div class="card-item__text">Pumping Iron</div>
+								</a>
+							</div>
 						</div>
-						<div class="card-item">
-							<a class="card-item__link" href="#">
-								<div class="card-item__text">Running & Spinning</div>
-							</a>
-						</div>
-						<div class="card-item">
-							<a class="card-item__link" href="#">
-								<div class="card-item__text">Running & Spinning</div>
-							</a>
-						</div>
-						<div class="card-item">
-							<a class="card-item__link" href="#">
-								<div class="card-item__text">Pumping Iron</div>
-							</a>
-						</div>
-						<div class="card-item card-item_big">
+						<div class="card-item card-item_big-sapphire">
 							<a class="card-item__link" href="#">
 								<div class="card-item__text">Physical Health</div>
 							</a>
 						</div>
-						<div class="card-item card-item_big">
+						<div class="card-item card-item_big-blue">
 							<a class="card-item__link" href="#">
 								<div class="card-item__text">Mental Health</div>
 							</a>
 						</div>
-						<div class="card-item card-item_big">
+						<div class="card-item card-item_big-green">
 							<a class="card-item__link" href="#">
 								<div class="card-item__text">Nutrition</div>
 							</a>
 						</div>
-						<div class="card-item card-item_big">
+						<div class="card-item card-item_big-turquoise">
 							<a class="card-item__link" href="#">
 								<div class="card-item__text">Gymnastics</div>
 							</a>
 						</div>
-						<div class="card-item card-item_big">
+						<div class="card-item card-item_big-gray">
 							<a class="card-item__link" href="#">
 								<div class="card-item__text">Crossfit</div>
 							</a>
@@ -198,26 +200,30 @@
 				<div class="contact-us__container">
 					<div class="contact-us__caption">CONTACT US</div>
 					<div class="contact-us__title">Ready. Set. Smile</div>
-					<div class="contact-us__text">Take the free online assessment to see if you are a candidate and get started on your journey.</div>
+					<div class="contact-us__text">Take the free online assessment to see if you are a candidate and get
+						started on your journey.</div>
 					<div class="contact-us__button button">GET HELP NOW</div>
 					<img src="#" alt="happy man photo" class="contact-us__image">
 				</div>
 			</div>
 			<!--===================================================================================================================================================== -->
-			 <div class="information">
+			<div class="information">
 				<div class="information__container">
-					<img src="#" alt="happy    women photo" class="information__image">
-					 <div class="info">
+					<img src="#" alt="happy women photo" class="information__image">
+					<div class="info">
 						<div class="info__title">SOME INFO</div>
-						<div class="info__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula.</div>
-					 </div>
-					 <div class="info">
+						<div class="info__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+							ligula.</div>
+					</div>
+					<div class="info">
 						<div class="info__title">ENFOLD HEALTH</div>
 						<div class="info__text">Main Street 1, Olcott Buffalo, United States</div>
-						<div class="info__telephone"><a class="info__link" href="tel:+555 283 784 333">+555 283 784 333</a></div>
-						<div class="info__mail"><a class="info__link" href="mailto:office@enfold-health.com">office@enfold-health.com</a></div>
-					 </div>
-					 <div class="info">
+						<div class="info__telephone"><a class="info__link" href="tel:+555 283 784 333">+555 283 784 333</a>
+						</div>
+						<div class="info__mail"><a class="info__link"
+								href="mailto:office@enfold-health.com">office@enfold-health.com</a></div>
+					</div>
+					<div class="info">
 						<div class="info__title">OFFICE HOURS</div>
 						<div class="info__lists">
 							<ul class="list">
@@ -226,17 +232,17 @@
 								<li class="list__item">Su: closed</li>
 							</ul>
 						</div>
-					 </div>
+					</div>
 				</div>
-			 </div>
+			</div>
 		</main>
 		<!-- ===================================================================================================================================================== -->
 		<footer class="footer">
 			<div class="footer__container">
-				<div class="footer__text"> Copyright - ThriveTalk  2017</div>
+				<div class="footer__text"> Copyright - ThriveTalk 2017</div>
 			</div>
 		</footer>
 	</div>
 </body>
 
-</html> 
+</html>
