--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 					<div class="info">
 						<div class="info__title">ENFOLD HEALTH</div>
 						<div class="info__text">Main Street 1, Olcott Buffalo, United States</div>
-						<div class="info__telephone"><a class="info__link" href="tel:+555 283 784 333">+555 283 784 333</a>
+						<div class="info__telephone"><a class="info__link" href="tel:+555283784333">+555 283 784 333</a>
 						</div>
 						<div class="info__mail"><a class="info__link"
 								href="mailto:office@enfold-health.com">office@enfold-health.com</a></div>
